[gd_scene load_steps=6 format=3 uid="uid://bq56tb6w0hcbb"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/npc_dialogue_box.gd" id="1_mteuw"]
[ext_resource type="Texture2D" uid="uid://vfgrp5seiq7s" path="res://sprites/ui/dialogue_nine_patch.png" id="2_l5pa6"]
[ext_resource type="Theme" uid="uid://babe0j67pdkhx" path="res://theming/dialogue_box_label.tres" id="3_d7jb6"]
[ext_resource type="Texture2D" uid="uid://civju8sthute2" path="res://sprites/ui/dialogue button.png" id="4_17q0w"]
[ext_resource type="LabelSettings" uid="uid://dyeel2yw3srlj" path="res://theming/button_label.tres" id="5_pxven"]

[node name="NpcDialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 380.0
script = ExtResource("1_mteuw")
padding = Vector4(0, 0, 0, 40)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 380.0
texture = ExtResource("2_l5pa6")
region_rect = Rect2(0, 0, 39, 39)
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 13.0
offset_right = -13.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_d7jb6")
bbcode_enabled = true
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="NoButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -44.0
offset_right = 124.0
offset_bottom = 40.0
grow_vertical = 0
keep_pressed_outside = true
texture_normal = ExtResource("4_17q0w")

[node name="Label" type="Label" parent="NinePatchRect/NoButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "No thanks"
label_settings = ExtResource("5_pxven")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="YesButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -44.0
offset_right = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
keep_pressed_outside = true
texture_normal = ExtResource("4_17q0w")

[node name="Label" type="Label" parent="NinePatchRect/YesButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "Buy
"
label_settings = ExtResource("5_pxven")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
